--- a/_pages/essays_and_research.html
+++ b/_pages/essays_and_research.html
@@ -1,8 +1,8 @@
 ---
 title: Essays & Research
 layout: page
-permalink: /writings/
-introduction: Articles, papers, and books to learn about Bitcoin.
+permalink: /traducoes/
+introduction: Traduções de artigos e papers para aprender sobre Bitcoin.
 aside: true
 sections: ['Bitcoin', 'Money', 'Bitcoin Economics', 'Mining and Consensus', 'Technical', 'Cypherpunk', 'Smart Contracts', 'Cryptography', 'Scaling', 'Investing', 'Society', 'The Economics of Sound Money', 'Nakamoto Institute', 'Additional Resources',]
 ---
