--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: homepage
 <div class="homepage-content">
   <div class="home-buttons-top">
     <div class="home-buttons-left">
-      <a href="/traducoes">
+      <a href="/artigos">
         <img class="writing-button" src="assets/graphics/essays_research.png" onmouseover="onWritingsHover();" onmouseout="offWritingsHover();"></img>
       </a>
     </div>
