--- a/_pages/essays_and_research.html
+++ b/_pages/essays_and_research.html
@@ -2,7 +2,7 @@
 title: Artigos e Ensaios
 layout: page
 permalink: /artigos/
-introduction: Traduções de artigos e papers para aprender sobre Bitcoin.
+introduction: Artigos e Ensaios para aprender sobre Bitcoin.
 aside: true
 sections: ['Bitcoin', 'Money', 'Bitcoin Economics', 'Mining and Consensus', 'Technical', 'Cypherpunk', 'Smart Contracts', 'Cryptography', 'Scaling', 'Investing', 'Society', 'The Economics of Sound Money', 'Nakamoto Institute', 'Additional Resources',]
 ---
