--- a/_pages/essays_and_research.html
+++ b/_pages/essays_and_research.html
@@ -1,7 +1,7 @@
 ---
 title: Artigos e Ensaios
 layout: page
-permalink: /artigos/
+permalink: /writings/
 introduction: Artigos e Ensaios para aprender sobre Bitcoin.
 aside: true
 sections: ['Bitcoin', 'Money', 'Bitcoin Economics', 'Mining and Consensus', 'Technical', 'Cypherpunk', 'Smart Contracts', 'Cryptography', 'Scaling', 'Investing', 'Society', 'The Economics of Sound Money', 'Nakamoto Institute', 'Additional Resources',]
