--- a/_pages/essays_and_research.html
+++ b/_pages/essays_and_research.html
@@ -4,5 +4,5 @@ layout: page
 permalink: /writings/
 introduction: Artigos e Ensaios para aprender sobre Bitcoin.
 aside: true
-sections: ['Bitcoin', 'Money', 'Bitcoin Economics', 'Mining and Consensus', 'Technical', 'Cypherpunk', 'Smart Contracts', 'Cryptography', 'Scaling', 'Investing', 'Society', 'The Economics of Sound Money', 'Nakamoto Institute', 'Additional Resources',]
+sections: ['Bitcoin', 'Money', 'Bitcoin Economics', 'Mining and Consensus', 'Technical', 'Filosofia', 'Cypherpunk', 'Smart Contracts', 'Cryptography', 'Scaling', 'Investing', 'Society', 'The Economics of Sound Money', 'Nakamoto Institute', 'Additional Resources',]
 ---
