homepage images update

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@ layout: homepage
   <div class="home-buttons-top">
     <div class="home-buttons-left">
       <a href="/writings">
-        <img class="writing-button" src="assets/graphics/essays_research.png" onmouseover="onWritingsHover();" onmouseout="offWritingsHover();"></img>
+        <img class="writing-button" src="assets/graphics/artigos.png" onmouseover="onWritingsHover();" onmouseout="offWritingsHover();"></img>
       </a>
     </div>
     <div class="home-buttons-right">
       <a href="/multimedia">
-        <img class="multimedia-button" src="assets/graphics/videos_media.png" onmouseover="onMultimediaHover();" onmouseout="offMultimediaHover();"></img>
+        <img class="multimedia-button" src="assets/graphics/videos.png" onmouseover="onMultimediaHover();" onmouseout="offMultimediaHover();"></img>
       </a>
     </div>
   </div>
@@ -24,8 +24,8 @@ layout: homepage
   <br/>
 
   <div class="home-buttons-bottom">
-    <a href="/blog">
-      <img class="blog-button" src="assets/graphics/theblog.png" onmouseover="onBlogHover();" onmouseout="offBlogHover();"><img>
+    <a href="/livros">
+      <img class="blog-button" src="assets/graphics/livros.png" onmouseover="onBlogHover();" onmouseout="offBlogHover();"><img>
     </a>
   </div>
 
