--- a/_pages/multimedia.html
+++ b/_pages/multimedia.html
@@ -4,5 +4,5 @@ layout: page
 permalink: /multimedia/
 introduction: Bitcoin podcasts, newsletters, websites, and videos.
 aside: true
-sections: ['Education', 'Technical', 'Cypherpunk', 'Society', 'Newsletters', 'Podcasts', 'YouTube', 'Blogs']
+sections: ['Educacional', 'Técnico', 'Cypherpunk', 'Sociedade', 'Newsletters', 'Podcasts', 'YouTube', 'Blogs']
 ---
