--- a/_pages/essays_and_research.html
+++ b/_pages/essays_and_research.html
@@ -4,5 +4,5 @@ layout: page
 permalink: /writings/
 introduction: Artigos e Ensaios para aprender sobre Bitcoin.
 aside: true
-sections: ['Bitcoin', 'Dinheiro', 'Economia Bitcoin', 'Mineração e Consenso', 'Técnico', 'Filosofia', 'Cypherpunk', 'Smart Contracts', 'Criptografia', 'Escala', 'Investimentos', 'Sociedade', 'A Economia do Sound Money', 'Nakamoto Institute', 'Recursos Adicionais',]
+sections: ['Bitcoin', 'Dinheiro', 'Economia Bitcoin', 'Mineração e Consenso', 'Técnico', 'Filosofia', 'Cypherpunk', 'Smart Contracts', 'Criptografia', 'Escala', 'Investimentos', 'Sociedade', 'Economia', 'Nakamoto Institute', 'Recursos Adicionais',]
 ---
